# capi4hylafax

./: .gitignore  AUTHORS  ChangeLog  GenerateFileMail.pl  LIESMICH.SuSE  LIESMICH.html  Makefile.am  Makefile.in  README.SuSE  README.html  aclocal.m4  config.faxCAPI  configure  configure.ac  configure.in  faxaddmodem.capi  install  kate.desktop  sample_AVMC4_config.faxCAPI  sample_faxrcvd  setupconffile
debian/: 76-faxcapi.rules  README.Debian  c2faxrecv.1  c2faxsend.1  capi4hylafax.default  capi4hylafax.dirs  capi4hylafax.doc-base  capi4hylafax.docs  capi4hylafax.examples  capi4hylafax.init  capi4hylafax.init.d  capi4hylafax.install  capi4hylafax.logrotate  capi4hylafax.manpages  capi4hylafax.postrm  capi4hylafax.preinst  capi4hylafax.prerm  capi4hylafaxconfig.1  changelog  control  copyright  faxsend  faxsend.1  rules  watch
debian/patches/: 01_convert-config-to-utf8.patch  02_optimize-config-paths.patch  03_optimize-printflags.patch  04_fix-for-run-autoconf.patch  05_fix-fprintf-params.patch  06_fix-platform-64-check.patch  07_standard-log-directory.patch  08_update-autoconf-files.patch  09_fix-spelling-errors.patch  10_gcc48_fixes.patch  series
doc/: README.html  Readme_src  fritz_pic.tif
src/: Makefile.in  defaults.h.in
src/capi/: CCSFacil.h  CCSMesg.h  CCSParam.h  CCStruct.cpp  CCStruct.h  CapiBase.h  CapiChan.cpp  CapiChan.h  CapiLay.cpp  CapiLay.h  CapiMsg.cpp  CapiMsg.h  CapiStat.cpp  CapiStat.h  Channel.cpp  Channel.h  DCMTrace.cpp  DCMTrace.h  DataHand.cpp  DataHand.h  Facility.cpp  Facility.h  MSNList.cpp  MSNList.h  Makefile.am  Makefile.in  PLCIList.cpp  PLCIList.h  WaitStat.h  c2msgdef.h  capi2def.h  dbgCAPI.h
src/convert/: BasicFax.cpp  BasicFax.h  Makefile.am  Makefile.in  ftif2huf.cpp  ftif2huf.h  huf2ftif.cpp  huf2ftif.h  huf2sff.cpp  huf2sff.h  hufman.h  osImport.h  revbyte.h  sff2huf.cpp  sff2huf.h
src/faxrecv/: Makefile.am  Makefile.in  faxrecv.cpp  faxrecv.h  recvdev.cpp  recvdev.h  recvmain.cpp  recvmain.h
src/faxsend/: Makefile.am  Makefile.in  faxsend.cpp  faxsend.h  sendmain.cpp
src/linuxdep/: CapiBase.cpp  Eventing.cpp  Makefile.am  Makefile.in  PrctlDmp.cpp  PrctlDmp.h  SecTimer.cpp  SysTick.cpp  SysTick.h  TimerList.cpp  TimerList.h  dbgLEVEL.cpp  dbgLINUX.h  misc.cpp  misc.h
src/standard/: ByteQueu.cpp  ByteQueu.h  CBTimer.cpp  CBTimer.h  CDbgIDS.cpp  CDbgIDS.h  CEvent.h  CString.cpp  CString.h  ConfAssi.cpp  ConfAssi.h  ConfPars.cpp  ConfPars.h  DatBlock.h  DataList.h  DataPack.h  DataPool.h  DbgFile.cpp  DbgFile.h  DbgInfo.cpp  DbgInfo.h  DynArray.cpp  DynArray.h  DynByteQ.cpp  DynByteQ.h  DynQueue.cpp  DynQueue.h  DynStore.cpp  DynStore.h  Eventing.h  ExtFuncs.h  FilePars.cpp  FilePars.h  InfoType.h  LinePars.cpp  LinePars.h  LoopTime.h  Makefile.am  Makefile.in  MultiStr.h  (+26 more)
suse/: c2faxrecv@.service  capi4hylafax-constcharptr.diff  capi4hylafax.spec
