## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS         = -I m4
AUTOMAKE_OPTIONS        = foreign
CLEANFILES              = *~ comperr config.cache config.log
MAINTAINERCLEANFILES    = configure aclocal.m4 Makefile.in

EXTRA_DIST  = ChangeLog                          \
              misc/GenerateFileMail.pl           \
              doc/LIESMICH.html                  \
              doc/README.html                    \
              doc/Readme_src                     \
              misc/config.faxCAPI                \
              doc/fritz_pic.tif                  \
              misc/sample_AVMC4_config.faxCAPI   \
              misc/sample_faxrcvd                
              
SUBDIRS     = src
