## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS        = foreign
CLEANFILES              = *~ comperr
MAINTAINERCLEANFILES    = Makefile.in

noinst_HEADERS          = aFlags.h      \
                          aStdLib.h     \
                          aStrPrt.h     \
                          aTypes.h      \
                          aString.h     \
                          ByteQueu.h    \
                          CBTimer.h     \
                          CDbgIDS.h     \
                          ConfAssi.h    \
                          ConfPars.h    \
                          CString.h     \
                          DataList.h    \
                          DataPack.h    \
                          DataPool.h    \
                          DatBlock.h    \
                          DbgFile.h     \
                          DbgInfo.h     \
                          dbgSTD.h      \
                          DynByteQ.h    \
                          DynQueue.h    \
                          DynStore.h    \
                          ExtFuncs.h    \
                          FilePars.h    \
                          InfoType.h    \
                          LinePars.h    \
                          MultiStr.h    \
                          osmem.h       \
                          PathName.h    \
                          Protect.h     \
                          ProtClas.h    \
                          PtrList.h     \
                          SecTimer.h    \
                          SortList.h    \
                          StdQueue.h

noinst_LIBRARIES        = libstandard.a

libstandard_a_SOURCES   = aStdLib.cpp   \
                          aString.cpp   \
                          aStrPrt.cpp   \
                          ByteQueu.cpp  \
                          CBTimer.cpp   \
                          CDbgIDS.cpp   \
                          ConfAssi.cpp  \
                          ConfPars.cpp  \
                          CString.cpp   \
                          DbgFile.cpp   \
                          DbgInfo.cpp   \
                          DynByteQ.cpp  \
                          DynQueue.cpp  \
                          DynStore.cpp  \
                          FilePars.cpp  \
                          LinePars.cpp  \
                          PtrList.cpp   \
                          SortList.cpp  \
                          StdQueue.cpp
